--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -1,67 +1,39 @@
 <section class="todoapp">
   <header class="header">
-    <h1>Tareas</h1>
+    <h1>Tasks</h1>
     <input
       id="new-todo-input"
       class="new-todo"
-      placeholder="¿Qué necesita ser hecho?"
+      placeholder="What must be done? 💡"
       autofocus
     />
   </header>
 
-  <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
     <input id="toggle-all" class="toggle-all" type="checkbox" />
     <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
-      <!-- These are here just to show the structure of the list items -->
-      <!-- List items should get the class "editing" when editing and "completed" when marked as completed -->
-      <!-- <li class="completed" data-id="abc">
-                <div class="view">
-                    <input class="toggle" type="checkbox" checked>
-                    <label>Probar JavaScript</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" value="Create a TodoMVC template">
-            </li> -->
-      <!-- <li>
-                <div class="view">
-                    <input class="toggle" type="checkbox">
-                    <label>Comprar un unicornio</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" value="Rule the web">
-            </li> -->
-    </ul>
+    <ul class="todo-list"></ul>
   </section>
 
-  <!-- This footer should hidden by default and shown when there are todos -->
   <footer class="footer">
-    <!-- This should be "0 items left" by default -->
     <span class="todo-count"
-      ><strong id="pending-count">0</strong> pendiente(s)</span
+      ><strong id="pending-count">0</strong> pending(s)</span
     >
-    <!-- Remove this if you don't implement routing -->
     <ul class="filters">
       <li>
-        <!-- selected -->
-        <a class="filtro" class="selected" href="#/">Todos</a>
+        <a class="filtro" class="selected" href="#/">All</a>
       </li>
       <li>
-        <a class="filtro" href="#/active">Pendientes</a>
+        <a class="filtro" href="#/active">Pending</a>
       </li>
       <li>
-        <a class="filtro" href="#/completed">Completados</a>
+        <a class="filtro" href="#/completed">Completed</a>
       </li>
     </ul>
-    <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Borrar completados</button>
+    <button class="clear-completed">Clear completed</button>
   </footer>
 </section>
 
 <footer class="info">
-  <p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-  <!-- Change this out with your name and url ↓ -->
-  <p>Creado por <a href="http://todomvc.com">ti</a></p>
-  <p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
+  <p>Created by Olaf Chwolka</p>
 </footer>
